리뷰삭제 js의 분리

--- a/review/src/main/resources/templates/MoviePage/EachMovie.html
+++ b/review/src/main/resources/templates/MoviePage/EachMovie.html
@@ -30,7 +30,6 @@
                    th:field="${movieInfo.movieName}" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button" id="movieView"><i class="fas fa-search"></i>
             </button>
-            <!-- 여기도 메인페이지의 검색코드와 동일한 부분. -->
         </div>
         <div class="mypage"> <!-- 내정보 -->
             <a href="MyPage" style="color: #F17F42;"><i class="fas fa-user-circle fa-2x"></i></a>
@@ -51,54 +50,8 @@
         <div class="item" name="StoryLine" th:text="${oneMovieInfo.getStoryLine()}">줄거리</div>
         <div id="reviewsInfo" class="item">평점 몰아보기 <!-- 디자인작업 필요 -->
             <script th:inline="javascript">
-                const isEmpty = function (value) {
-                    if (value=="null" || value == "" || value == null || value == undefined || (value != null && typeof value == "object" && !Object.keys(value).length)) {
-                        return true
-                    } else {
-                        return false
-                    }
-                };
-
-
                 const getReview = [[${AllReviewInfo}]];
-                if (getReview.length == 1) {
-                    $("#reviewsInfo").append('<div>등록된 리뷰가 없습니다</div>')
-                } else {
-                    $("#reviewsInfo").empty();
-                    for (let i = 1; i < getReview.length; i++) {
-                        $("#reviewsInfo").append('리뷰단사람 id : <div>' + getReview[i].reviewUser + '</div>')
-                        $("#reviewsInfo").append('영화 점수 : <div>' + getReview[i].moviePoint + '</div>')
-                        $("#reviewsInfo").append('리뷰 본문 : <div>' + getReview[i].movieReivew + '</div>')
-                        $("#reviewsInfo").append('<button onclick="deleteReview(\'' + [[${sessionId}]] + '\');" >리뷰 삭제하기</button>')
-                    }
-                }
-
-                window.deleteReview = function (reviewUser) {
-                    if (isEmpty(reviewUser)) {
-                        alert("로그인부터 진행해 주세요.")
-                    } else {
-                        if (confirm("리뷰를 삭제하시겠습니까?") == true) {
-                            $.ajax({
-                                type: "GET",
-                                url: "/EachMovie/reviewDelete",
-                                data: reviewUser,
-                                success: function (deleteResult) {
-                                    if (deleteResult == 0) {
-                                        alert("로그인부터 진행해 주세요.")
-                                    } else {
-                                        alert("리뷰가 삭제되었습니다.")
-                                        window.location.reload();
-                                    }
-                                },
-                                error: function (XMLHttpRequest, textStatus, errorThrown) {
-                                    alert("통신 실패.")
-                                }
-                            });
-                        } else {
-                            return;
-                        }
-                    }
-                };
+                const sessionId = [[${sessionId}]];
             </script>
         </div>
         <div class="item">내가 쓰는 평점
@@ -130,6 +83,6 @@
     </div>
 </content>
 <script th:src="@{/js/SearchFunc/SearchFunc.js}"></script>
-<script th:src="@{/js/Review/ReviewFunc.js}"></script>
+<script type="text/javascript" th:src="@{/js/Review/ReviewFunc.js}"></script>
 </body>
 </html>
