메인페이지 피자모형 작업

--- a/review/src/main/resources/static/css/main.css
+++ b/review/src/main/resources/static/css/main.css
@@ -26,6 +26,10 @@ header{
     margin-top: 50px;
 }
 
+.Allpizza{
+    width: 40px;
+}
+
 .input-group.mb-3{
     width: 500px;
     margin: 0 auto;
