메인페이지 피자모형 작업 완성!!!

--- a/review/src/main/resources/static/css/main.css
+++ b/review/src/main/resources/static/css/main.css
@@ -26,6 +26,7 @@ header{
     margin-top: 50px;
 }
 
+
 .Allpizza{
     width: 40px;
 }
@@ -88,6 +89,8 @@ header{
     width: 22%;
 }
 
+
+
 .moviePoster{
     width :100%;
     cursor: pointer;
@@ -100,6 +103,10 @@ header{
     font-weight: bold;
     cursor: pointer;
 }
+#pizzaShapes{
+    width: 20%;
+}
+
 .movieName:hover{
     color: #fa7683;
     transition: all 250ms ease;
