--- a/review/src/main/resources/templates/MoviePage/EachMovie.html
+++ b/review/src/main/resources/templates/MoviePage/EachMovie.html
@@ -82,9 +82,11 @@
 </content>
 <script th:src="@{/js/LoginOrLogOutFunc/LoginOrLogOutFunc.js}"></script>
 <script th:inline="javascript">
-    const photoOriName= [[${photoPath}]]
+    const photoOriName= [[${photoPath}]];
     const getReview = [[${AllReviewInfo}]];
-    const sessionId = [[${sessionId}]];
+    let sessionId = [[${sessionId}]];
+    loginOrLogOutCheck(sessionId)
+
 </script>
 <script th:src="@{/js/SearchFunc/SearchFunc.js}"></script>
 <script type="text/javascript" th:src="@{/js/Review/ReviewFunc.js}"></script>
