--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -11,8 +11,16 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <body>
 <header>
+    <div class="Info">
+        <div class="mypage">
+            <a href="MyPage">마이페이지</a>
+        </div>
+        <div id="LoginArea" class="logIn">
+        </div>
+        <a href="Join">회원가입</a>
+    </div>
     <div class="title">
-        <b>Film Project</b>
+        <b>Fresh Pizza</b>
     </div>
     <div class="base">
         <div class="input-group mb-3">
@@ -20,16 +28,6 @@
                    aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button" id="movieView"><i class="fas fa-search"></i>
             </button>
-        </div>
-        <div class="Info">
-            <div class="mypage">
-                <a href="MyPage">마이페이지</a>
-            </div>
-            <div id ="LoginArea" class="logIn">
-                <a href="Join">회원가입</a>
-<!--                <a href="Login">로그인</a>-->
-<!--                <a href="logout">로그아웃</a>-->
-            </div>
         </div>
     </div>
 </header>
