RESTFul 방식 도입중 .. 1

--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>user Pw Change</title>
-    <link rel="stylesheet" href="/css/userPwChange.css">
     <link rel="stylesheet" th:href="@{/css/userPwChange.css}">
 </head>
 <body>
 <h>사용자 비밀번호 변경 페이지</h>
 <form th:action method="post" th:object="${userInfo}" name="form">
+    <input type="hidden" name="_method" value="PATCH"/>
     <table>
         <tr>
             <td th:name="id" th:text="*{id}">ID</td><!--사용자의 아이디가 보여야함-->
