--- a/review/src/main/resources/templates/MoviePage/EachMovie.html
+++ b/review/src/main/resources/templates/MoviePage/EachMovie.html
@@ -42,7 +42,7 @@
 <content>
     <div class="container">
         <div class="item"><img id="moviePoster" th:src="@{/moviePhoto/}+${photoPath}"></div>
-        <div class="item" name="TrailerCode" th:utext="${oneMovieInfo.getTrailerCode()}"></div>
+        <div class="item" name="TrailerCode" th:text="${oneMovieInfo.getTrailerCode()}"></div>
         <div class="item">
             <img class="pizza" th:src="${pizza}">
         </div>
