--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>manager Pw Change</title>
-    <link rel="stylesheet" href="/css/managerPwChange.css">
     <link rel="stylesheet" th:href="@{/css/managerPwChange.css}">
 </head>
 <body>
@@ -11,6 +10,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <h1>관리자 마이페이지</h1>
 <form th:action method="post" th:object="${mangerInfo}" name="form">
+    <input type="hidden" name="_method" value="PATCH"/>
     <div class="content">
         <div class="ID">아이디</div>
         <div th:name="id" th:text="*{id}" class="IDWrote">ID</div><!--관리자의 아이디가 보여야함-->
