Restful로 변경 및 이메일인증 코드 수정

--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -35,6 +35,7 @@
     </div>
 </form>
 <form th:action="@{/MyPage/delete}" th:method="post" class="answer">
+    <input type="hidden" name="_method" value="delete"/>
     <input type="submit" value="회원 탈퇴하기">
 </form>
 <script th:src="@{/js/MovieDeleteFunc/MovieDeleteCheckFunc.js}"></script>
