--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -36,6 +36,7 @@
     <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
 </form>
 <form th:action="@{/MyPage/delete}" th:method="post">
+    <input type="hidden" name="_method" value="delete"/>
     <input type="submit" value="회원 탈퇴하기">
 </form>
 </body>
