내가쓴 리뷰정보 가져오기 기능 구현중..1 ( 리뷰정보 가져오고, 리뷰정보에 있는 photoOriName을 통해 영화제목 추출까지 구현 )

--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -8,7 +8,7 @@
 <body>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<h1>관리자 마이페이지</h1>
+<h1>관리자 정보</h1>
 <form th:action method="post" th:object="${mangerInfo}" name="form">
     <input type="hidden" name="_method" value="PATCH"/>
     <div class="content">
