내가 쓴 리뷰 전체 가져오기 구현중..2

--- a/review/src/main/resources/templates/MyPage/userPwChange.html
+++ b/review/src/main/resources/templates/MyPage/userPwChange.html
@@ -34,7 +34,7 @@
     </table>
     <input type="submit" value="비밀번호 변경하기">
     <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
-    <input type="button" value="내가 작성했던 리뷰 전체 조회하기" th:onclick="||">
+    <input type="button" value="내가 작성했던 리뷰 전체 조회하기" th:onclick="|location.href='@{/MyReview}'|">
 </form>
 <form th:action="@{/MyPage/delete}" th:method="post">
     <input type="hidden" name="_method" value="delete"/>
