웹소켓 다른거로 변경 ( 메시지 전 후로 검증필요해서 전체 리펙토링.. )

--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </header>
-<div id="greetings"></div>
+<div id="greetings"></div> <!-- 새로운영화 알람 붙는부분 -->
 
 <div id="container">
     <th:block th:each="borads : ${boardList}">
@@ -67,7 +67,6 @@
     let SessionId = [[${SessionId}]];
     loginOrLogOutCheck(SessionId)
 </script>
-<script th:src="@{/js/WebSocketJs/socket.js}"></script>
 <script th:src="@{/js/WebSocketJs/socketConnect.js}"></script>
 <script th:src="@{/js/MainPizzaShapeFunc/pizzaShape.js}"></script>
 <script th:src="@{/js/SearchFunc/SearchFunc.js}"></script>
